--- a/codbex-lead-customer-ext/project.json
+++ b/codbex-lead-customer-ext/project.json
@@ -1,5 +1,10 @@
 {
     "guid": "codbex-lead-customer-ext",
+    "repository": {
+        "type": "git",
+        "branch": "main",
+        "url": "https://github.com/codbex/codbex-lead-customer-ext.git"
+    },
     "dependencies": [],
     "actions": [
         {
